# task_controllers

./: README.md
hiqp_collision_check/: CMakeLists.txt  package.xml
hiqp_collision_check/include/hiqp_collision_check/: checker_base.h  sdf_collision_checker.h
hiqp_collision_check/msg/: SDFMap.msg
hiqp_collision_check/src/: sdf_collision_checker.cpp
hiqp_core/: CMakeLists.txt  package.xml
hiqp_core/include/hiqp/: task.h  task_definition.h  utilities.h
hiqp_core/include/hiqp/geometric_primitives/: geometric_box.h  geometric_cylinder.h  geometric_frame.h  geometric_point.h  geometric_primitive.h  geometric_primitive_map.h  geometric_sphere.h
hiqp_core/include/hiqp/solvers/: qpoases_solver.h
hiqp_core/include/hiqp/tasks/: dynamics_first_order_cubic.h  task_avoid_collisions_sdf.h  task_geometric_alignment.h  task_geometric_alignment__impl.h  tdef_geometric_projection_with_nullspace.h  tdef_geometric_projection_with_nullspace__impl.h  tdef_meta_task.h
hiqp_core/src/: task.cpp  task_manager.cpp  utilities.cpp
hiqp_core/src/geometric_primitives/: geometric_primitive_map.cpp
hiqp_core/src/solvers/: gurobi_solver.cpp  qpoases_solver.cpp
hiqp_core/src/tasks/: dynamics_first_order.cpp  dynamics_first_order_cubic.cpp  dynamics_minimal_jerk.cpp  task_avoid_collisions_sdf.cpp  task_geometric_projection.cpp  tdef_geometric_alignment.cpp  tdef_geometric_projection.cpp  tdef_geometric_projection_with_nullspace.cpp  tdef_meta_task.cpp
hiqp_msgs/: CMakeLists.txt
hiqp_msgs/srv/: ListAllGeometricPrimitives.srv
hiqp_ros/: CMakeLists.txt  package.xml  plugins.xml
hiqp_ros/config/: yumi.yaml  yumi_preload.yaml  yumi_preload_ldyn.yaml  yumi_preload_old.yaml
hiqp_ros/include/hiqp_ros/: hiqp_client.h  hiqp_joint_velocity_controller_collision.h  ros_visualizer.h
hiqp_ros/launch/: yumi.rviz  yumi_collision.launch  yumi_simulation.launch
hiqp_ros/servicecalls/functional_tests/TDefGeomAlign/: frame_allign_collision.sh
hiqp_ros/servicecalls/playground/: clear_controller.sh  set_init_config.sh  sphere_on_plane_projection.sh  test_collision_avoidance_sdf.sh  test_collision_avoidance_sdf_point.sh  test_collision_avoidance_sdf_sphere.sh  test_point_plane_avoidance.sh  test_point_plane_projection.sh  test_point_point_projection.sh  test_point_sphere_projection.sh
hiqp_ros/servicecalls/teleoperation/: set_init_config.sh  start_assisted_teleop.sh  stop_assisted_teleop.sh
hiqp_ros/src/: hiqp_client.cpp  hiqp_joint_velocity_controller.cpp  hiqp_joint_velocity_controller_collision.cpp  ros_topic_subscriber.cpp
